--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="portfolio-layer">
                         <h4>Calculator Project</h4>
                         <p>In this project JavaScript was used in order to show a basic functioning calculator.</p>
-                        <a href=https://vscode.dev/github/shreya6360/Responsive-personal_portfolio/blob/main/CalculatorProject><i class='bx bx-link-external' ></i></a>
+                        <a href=https://zainahmedgh.github.io/calculator/><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
                 <div class="portfolio-box">
