--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="https://www.instagram.com/zaingroup/?hl=en"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://uk.linkedin.com/in/zain-ahmed-846994174"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
-                <a href="https://docs.google.com/document/d/1D0ps--FUJ6_RcfO0ysLpFQNh9cfxZkXY/edit?usp=drive_link&ouid=108677837747389315611&rtpof=true&sd=true" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1RAp5c3i21-zovBIjGPS4jys8uncxyF9I/view?usp=sharing" class="btn">Download CV</a>
             </div>
             <div class="home-img">
                 <img src="https://img.freepik.com/free-vector/cloud-services-isometric-composition-with-big-cloud-computing-infrastructure-elements-connected-with-dashed-lines-vector-illustration_1284-30495.jpg?t=st=1736393779~exp=1736397379~hmac=6a8eb5f772a9d9fc94f315d6153d6f3319e325289ed547aaab8212a1ac6ec0aa&w=1380" alt="">
